# DataBeam

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  croc_release.json  old_backend.rs  package_artifacts.sh  trubleshoot.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish-v0.1.10.yml  release.yml
LICENSES/: AGPL-3.0.txt  Apache-2.0.txt  MIT.txt
assets/icons/: icon.icns
docs/: CNAME  index.html  script.js  style.css
src/: backend.rs  f_1.txt  f_10.txt  f_100.txt  f_101.txt  f_102.txt  f_103.txt  f_104.txt  f_105.txt  f_106.txt  f_107.txt  f_108.txt  f_109.txt  f_11.txt  f_110.txt  f_111.txt  f_112.txt  f_113.txt  f_114.txt  f_115.txt  f_116.txt  f_117.txt  f_118.txt  f_119.txt  f_12.txt  f_120.txt  f_121.txt  f_122.txt  f_123.txt  f_124.txt  f_125.txt  f_126.txt  f_127.txt  f_128.txt  f_129.txt  f_13.txt  f_130.txt  f_131.txt  f_132.txt  f_133.txt  (+461 more)
