[package]
name = "databeam"
version = "0.1.6"
edition = "2021"
description = "A beautiful GUI wrapper for croc and sendme file transfer tools"
authors = ["DataBeam"]

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "6"
which = "7"
flate2 = "1"
tempfile = "3"
libc = "0.2.182"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
qrcode = "0.14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
