[package]
name = "databeam"
version = "0.1.10"
edition = "2021"
description = "A beautiful GUI wrapper for croc and sendme file transfer tools"
authors = ["DataBeam <databeam@users.noreply.github.com>"]

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "6"
which = "7"
flate2 = "1"
tempfile = "3"
libc = "0.2.182"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
qrcode = "0.14"
portable-pty = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[package.metadata.bundle]
name = "DataBeam"
identifier = "com.vinaywinai.databeam"
short_description = "Secure GUI wrapper for croc and sendme"
category = "Productivity"
copyright = "Copyright (c) DataBeam"
linux_use_terminal = false
deb_depends = [
  "libasound2",
  "libglib2.0-0",
  "libgtk-3-0",
  "libx11-6",
  "libxcursor1",
  "libxi6",
  "libxkbcommon0",
  "libxrandr2",
  "libwayland-client0",
  "libwayland-cursor0",
  "libwayland-egl1",
]
